# haystack

./: .gitignore  README.md  fetch_configs.py  haystack.py  main.py  pyproject.toml  search.py
.cursor/rules/: use-polars-not-pandas.mdc  use-uv-package-manager.mdc
