[project]
name = "haystack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudvision>=1.23.2",
    "duckdb>=1.2.1",
    "polars>=1.24.0",
    "pyarrow>=19.0.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I001"]
fixable = ["I001"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
